--- a/program/nmmp/mainwindow.ui
+++ b/program/nmmp/mainwindow.ui
@@ -136,37 +136,11 @@
      <string>0.5</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>180</y>
-      <width>191</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Температура окружающей среды, С</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="atmosphere_temperature_line_edit">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>200</y>
-      <width>221</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>20</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>220</y>
+      <y>190</y>
       <width>211</width>
       <height>16</height>
      </rect>
@@ -179,7 +153,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
+      <y>210</y>
       <width>221</width>
       <height>21</height>
      </rect>
@@ -192,7 +166,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>230</y>
       <width>211</width>
       <height>16</height>
      </rect>
@@ -205,7 +179,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>250</y>
       <width>221</width>
       <height>21</height>
      </rect>
@@ -218,7 +192,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>320</y>
+      <y>290</y>
       <width>221</width>
       <height>21</height>
      </rect>
@@ -231,7 +205,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
+      <y>270</y>
       <width>211</width>
       <height>16</height>
      </rect>
@@ -244,20 +218,20 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
+      <y>330</y>
       <width>221</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>0,59</string>
+     <string>0.59</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>310</y>
       <width>231</width>
       <height>16</height>
      </rect>
@@ -270,20 +244,20 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>370</y>
       <width>221</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>1,65</string>
+     <string>1.65</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>380</y>
+      <y>350</y>
       <width>191</width>
       <height>16</height>
      </rect>
@@ -296,7 +270,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>400</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -312,7 +286,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>510</y>
+      <y>450</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -324,13 +298,13 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QCustomPlot" name="widget" native="true">
+   <widget class="QCustomPlot" name="qcustomplot" native="true">
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>0</y>
+      <y>20</y>
       <width>531</width>
-      <height>561</height>
+      <height>541</height>
      </rect>
     </property>
    </widget>
